# template-python-library

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  lints.yml  publish.yml  publish_to_pypi.yml  tests.yml
src/package/: module.py
tests/: test_module.py
